alignment correction

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,16 +13,27 @@
     list-style: none;
     margin-top: 15px;
     
+    
+    
 }
 .footer-list a{
     text-decoration: none;
     color: #B9E3C6;
+    
 }
 
-@media only screen and (min-width: 1100px) {
+@media only screen and (min-width: 992px) {
     .subscribe-div {
       border-right: 1px solid white;
     }
+    .footer-list{
+        list-style: none;
+        margin-top: 15px;
+        margin-left: -17%;
+        
+        
+    }
+    
   }
 @media only screen and (min-width: 200px) {
     .subscribe-div {
